# Capra

./: .gitignore  .pre-commit-hooks.yaml  README.md  pyproject.toml
capra/: Application.py  Config.py  IOOperations.py  Log.py  cli.py  globals.py  io.py
capra/helpers/: globals.py  printer.py
src/capra/: cli.py
tests/: test_capra.py
