[tool.poetry]
name = "capra"
version = "0.0.1"
description = "A collection of penetration testing tools under one roof."
authors = ["Kleo Hasani"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kleohasani/Capra"
repository = "https://github.com/kleohasani/Capra"
documentation = "https://github.com/kleohasani/Capra#readme"
keywords = ["Scanner", "Enumeration", "C2"]
classifiers = [
    "Topic :: System :: Networking",
]
packages = [
    { include = "capra" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/kleohasani/Capra/issues"

[tool.poetry.build]
generate-setup-file = false

[tool.poetry.scripts]
start = "capra.cli:bootstrap"

[tool.poetry.dependencies]
python = "^3.10"
termcolor = "^1.1.0"
progress = "^1.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
